syntax = "proto3";

package pb;

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message AcceptGameInviteRequest {
    int64 invitee_player_id = 1;
    int64 game_id = 2;
}
